@@ -1,0 +1,9 @@
+{% extends "base.html" %}
+
+{% block title %}Registration complete{% endblock %}
+{% load i18n %}
+{% block content %}
+<h1>Registration complete</h1>
+<p>You have successfully registered a new account.</p>
+<p><a href="/profile">{% trans "Go to my profile" %}</a></p>
+{% endblock %}
